Fixes button text style on small screens

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -58,7 +58,7 @@ h2.button-text {
 
 .btn.btn-default.report-header-btn {
   height: 50%;
-  font-size: 8px;
+  font-size: 7px;
   background-color: #E21E26;
   width: 125px;;
   font-family: 'Poppins', 'Open Sans';
